--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ $(function () {
   <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar navbar-light fixed-top " style="background-color:lightgray">
       <div class="container">
-         <p class="navbar-brand order-1 mr-3" >Vegan Word</p>
+         <p class="navbar-brand order-1 mr-3 text-muted" >Vegan Word</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
